# cmake-template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
cmake/: toolchain_x64.cmake
docs/: Doxyfile
include/template/: template.hpp
src/: template.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp  template.cpp
